@startuml
title FitChasers UI - Class Diagram

skinparam linetype ortho
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam ArrowColor #444
skinparam ClassBorderColor #222
skinparam ClassBackgroundColor #FAFAFA
skinparam NoteBackgroundColor #fff
skinparam NoteBorderColor #aaa
skinparam stereotypeFontStyle bold
hide empty fields
hide empty methods
hide circle

' ===== Types used by UI =====
class Scanner

class Exercise {
- name: String
- sets: ArrayList<Integer>
--
+ addSet(reps: int): void
+ getSets(): ArrayList<Integer>
+ toString(): String
}

class Workout {
- workoutName: String
- duration: int
- exercises: ArrayList<Exercise>
--
+ addExercise(exercise: Exercise): void
+ getExercises(): ArrayList<Exercise>
+ getWorkoutDateString(): String
}


class WeightManager {
- currentUser: Person
--
+ addWeight(command: String): void
+ viewWeights(): void
+ isValidWeight(weight: double): boolean
}

' ===== UI class (trimmed to essentials) =====
class UI {
  - scanner: Scanner
  --
  + readCommand(): String
  + showMessage(message: String): void
  + showError(error: String): void
  + showHelp(): void
  + displayDetailsOfWorkout(workout: Workout): void
  + readInsideRightBubble(prompt: String): String
  + confirmationMessageWithCancel(): Boolean
}

' ===== Relationships =====
UI *-- Scanner
UI ..> Workout
UI ..> Exercise
UI ..> WeightManager
@enduml
